# self-audit

./: README.md  pyproject.toml
self_audit/: cli.py
tests/: __init__.py  test_cli.py
